# fastapi-dockerc

./: .Dockerignore  .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
.github/workflows/: deploy.yml
alembic/versions/: 41bc088ac05a_init_db.py
app/: main.py
app/core/: settings.py
app/models/: database.py  engine.py
app/routes/: user_routes.py
app/schema/: user.py
app/services/: user_service.py
